V3.12.0.220 (#51)
* chore(sync): 建立 3.12.0.220 上游同步台账与合并护栏

- 新增 docs/upstream/3.12.0.220.md 逐提交对照台账（563 个上游提交初稿）
- 将 tponder en_us 语言文件从 generated 移入 authored 静态资源目录，避免 runData 误删
- 配置 merge.ours.driver 与 upstream 只读远端（不入库）

* build(deps): Mantle 抬升至 1.11.113 并补齐上游访问转换器

- mantle_version 1.11.97 -> 1.11.113（HTML 导出与 BlockEntityPacket 等新 API 的硬前置）
- mod_version 升为 3.12.0.1-CTNH-Version
- accesstransformer.cfg 追加上游 6 组条目（spawnItemParticles/ArmorStand 破坏/作物属性/GuiGraphics innerBlit/TextureAtlasHolder getSprite/ItemEntity pickupDelay/SpriteSources register）
- pack.mcmeta pack_format 8 -> 15

* feat(client): 引入上游强化模型 JSON 系统核心框架

- 新增 ModifierModelMap/ModifierModelMapManager 与 model 包 14 个模型类
- 新增 AbstractModifierModelMapProvider 数据提供抽象（banner 改为 ModifierId 参数化，暂缓全量 provider）
- 新增 ShieldBannerModifierSpriteSource/MaterialHasFallbackTextureSupplier/NoFieldRecordLoadable
- 同步底层前置：ToolStats 重构与 IntegerToolStat/PercentToolStat、ModifierNBT、IToolStat、CapacityStat、ModifierId/ MaterialId/ ToolTankHelper
- IModDataView/ModDataNBT 重放 fork 的 getLong/putLong 扩展
- ModuleWithKey 补 getKey(ModifierEntry) 重载
- 暂缓 SlimeskullModifierModel 与 tools/data/client/ModifierModelMapProvider（依赖 S4 史莱姆线工具）

* feat(client): 强化模型映射接入工具模型与运行期注册

- ToolModel/NestedOverrides/MaterialModel/MaterialBlockModel 同步上游 3.12（支持 modifier_maps 并行键）
- ToolClientEvents 注册 ModifierModelMapManager reload listener 与 legacy blacklist
- ShieldBannerModifierSpriteSource 挂入 addResourceListener
- ModifierIds 补齐 7 个上游 JSON 迁移强化 ID 常量（bucketing/firestarter/knockback/necrotic/silky/soulspeed/unbreakable）
- 全量 ModifierModelMapProvider 暂缓至 S4 史莱姆线完成（依赖 slimeWings 等工具）

* feat(book): 支持宝典页面导出为 HTML

- 应用上游 50f9bbcb11/e0d6d9f979/bc5c326150 三个 HTML 导出提交到 9 个书页 content 类
- HTML 序列化基于 Mantle 1.11.113 的 HtmlElement/HtmlGroup/HTMLUtils 构建器
- ArmorMaterialContent 的 MAILLE 引用适配 fork 的 ArmorPartMaterialStats 体系
- 暂缓 TinkerBook 注册（依赖 S4 史莱姆内容类型）

* feat(tools): 引入史莱姆材料与修复类 stat 类型

- IMaterialStats/IRepairableMaterialStats 增 ScaledTooltip 