@@ -17,17 +17,21 @@ import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.item.*;
 import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.material.Fluid;
+import net.minecraftforge.common.ToolActions;
 import net.minecraftforge.common.crafting.ConditionalAdvancement;
 import net.minecraftforge.common.crafting.conditions.ICondition;
 import net.minecraftforge.fluids.FluidStack;
 import net.minecraftforge.fluids.capability.IFluidHandler.FluidAction;
 import net.minecraftforge.fluids.capability.templates.FluidTank;
 import slimeknights.mantle.data.GenericDataProvider;
+import slimeknights.mantle.data.predicate.IJsonPredicate;
 import slimeknights.mantle.registration.object.EnumObject;
 import slimeknights.mantle.registration.object.ItemObject;
 import slimeknights.tconstruct.TConstruct;
 import slimeknights.tconstruct.common.TinkerTags;
+import slimeknights.tconstruct.common.data.advancement.AdvancementIds;
 import slimeknights.tconstruct.common.json.ConfigEnabledCondition;
 import slimeknights.tconstruct.common.registration.CastItemObject;
 import slimeknights.tconstruct.fluids.TinkerFluids;
@@ -36,6 +40,9 @@ import slimeknights.tconstruct.library.json.predicate.tool.*;
 import slimeknights.tconstruct.library.materials.definition.MaterialId;
 import slimeknights.tconstruct.library.modifiers.ModifierId;
 import slimeknights.tconstruct.library.modifiers.util.LazyModifier;
+import slimeknights.tconstruct.library.tools.item.armor.ModifiableArmorItem;
+import slimeknights.tconstruct.library.tools.nbt.IToolContext;
+import slimeknights.tconstruct.library.tools.nbt.IToolStackView;
 import slimeknights.tconstruct.library.tools.nbt.MaterialIdNBT;
 import slimeknights.tconstruct.library.tools.stat.ToolStats;
 import slimeknights.tconstruct.library.utils.NBTTags;
@@ -62,6 +69,7 @@ import javax.annotation.Nullable;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.BiConsumer;
+import java.util.function.Function;
 import java.util.function.Consumer;
 import java.util.stream.Stream;
 
@@ -103,7 +111,10 @@ public class AdvancementsProvider extends GenericDataProvider {
         Advancement tinkerTool = builder(TinkerTools.pickaxe.get().getRenderTool(), resource("tools/tinker_tool"), tinkerStation, FrameType.TASK, builder ->
                 builder.addCriterion("crafted_tool", hasTag(TinkerTags.Items.MULTIPART_TOOL)));
         Advancement harvestLevel = builder(Items.NETHERITE_INGOT, resource("tools/netherite_tier"), tinkerTool, FrameType.GOAL, builder ->
-                builder.addCriterion("harvest_level", InventoryChangeTrigger.TriggerInstance.hasItems(ToolStackItemPredicate.ofTool(new StatInSetPredicate<>(ToolStats.HARVEST_TIER, Tiers.NETHERITE)))));
+                builder.addCriterion("harvest_level", InventoryChangeTrigger.TriggerInstance.hasItems(ToolStackItemPredicate.ofTool(ToolStackPredicate.and(
+                        ToolStackPredicate.tag(TinkerTags.Items.HARVEST),
+                        new StatInSetPredicate<>(ToolStats.HARVEST_TIER, Tiers.NETHERITE)
+                )))));
         builder(Items.TARGET, resource("tools/perfect_aim"), tinkerTool, FrameType.GOAL, builder ->
                 builder.addCriterion("accuracy", InventoryChangeTrigger.TriggerInstance.hasItems(ToolStackItemPredicate.ofTool(ToolStackPredicate.and(
                         ToolStackPredicate.tag(TinkerTags.Items.BOWS),
@@ -392,11 +403,11 @@ public class AdvancementsProvider extends GenericDataProvider {
                 builder.addCriterion("crafted_book", hasItem(TinkerCommons.tinkersGadgetry)));
         builder(TinkerWorld.slimeSapling.get(FoliageType.EARTH), resource("world/earth_island"), tinkersGadgetry, FrameType.GOAL, builder ->
                 builder.addCriterion("found_island", PlayerTrigger.TriggerInstance.located(LocationPredicate.inStructure(Objects.requireNonNull(TinkerStructures.earthSlimeIsland)))));
-        builder(TinkerWorld.slimeSapling.get(FoliageType.SKY), resource("world/sky_island"), tinkersGadgetry, FrameType.GOAL, builder ->
+        Advancement skyslimeIsland = builder(TinkerWorld.slimeSapling.get(FoliageType.SKY), resource("world/sky_island"), tinkersGadgetry, FrameType.GOAL, builder ->
                 builder.addCriterion("found_island", PlayerTrigger.TriggerInstance.located(LocationPredicate.inStructure(Objects.requireNonNull(TinkerStructures.skySlimeIsland)))));
         builder(TinkerWorld.slimeSapling.get(FoliageType.BLOOD), resource("world/blood_island"), tinkersGadgetry, FrameType.GOAL, builder ->
                 builder.addCriterion("found_island", PlayerTrigger.TriggerInstance.located(LocationPredicate.inStructure(Objects.requireNonNull(TinkerStructures.bloodIsland)))));
-        Advancement enderslimeIsland = builder(TinkerWorld.slimeSapling.get(FoliageType.ENDER), resource("world/ender_island"), tinkersGadgetry, FrameType.GOAL, builder ->
+        builder(TinkerWorld.slimeSapling.get(FoliageType.ENDER), resource("world/ender_island"), tinkersGadgetry, FrameType.GOAL, builder ->
                 builder.addCriterion("found_island", PlayerTrigger.TriggerInstance.located(LocationPredicate.inStructure(Objects.requireNonNull(TinkerStructures.endSlimeIsland)))));
         builder(Items.CLAY_BALL, resource("world/clay_island"), tinkersGadgetry, FrameType.GOAL, builder ->
                 builder.addCriterion("found_island", PlayerTrigger.TriggerInstance.located(LocationPredicate.inStructure(Objects.requireNonNull(TinkerStructures.clayIsland)))));
@@ -408,9 +419,9 @@ public class AdvancementsProvider extends GenericDataProvider {
         });
         builder(TinkerGadgets.piggyBackpack, resource("world/piggybackpack"), tinkersGadgetry, FrameType.GOAL, builder ->
                 builder.addCriterion("used_pack", PlayerInteractTrigger.TriggerInstance.itemUsedOnEntity(ContextAwarePredicate.ANY, ItemPredicate.Builder.item().of(TinkerGadgets.piggyBackpack), EntityPredicate.wrap(EntityPredicate.Builder.entity().of(EntityType.PIG).build()))));
-        Advancement slimesuit = builder(TinkerTools.slimesuit.get(ArmorItem.Type.CHESTPLATE).getRenderTool(), resource("world/slimesuit"), enderslimeIsland, FrameType.GOAL, builder ->
+        Advancement slimesuit = builder(new MaterialIdNBT(List.of(MaterialIds.bone, MaterialIds.skyslime)).updateStack(new ItemStack(TinkerTools.slimesuit.get(ArmorItem.Type.CHESTPLATE))), resource("world/slimesuit"), skyslimeIsland, FrameType.GOAL, builder ->
                 TinkerTools.slimesuit.forEach((type, armor) -> builder.addCriterion("crafted_" + type.getName(), hasItem(armor))));
-        builder(new MaterialIdNBT(Collections.singletonList(MaterialIds.glass)).updateStack(new ItemStack(TinkerTools.slimesuit.get(ArmorItem.Type.HELMET))),
+        builder(new MaterialIdNBT(List.of(MaterialIds.glass, MaterialIds.enderslime)).updateStack(new ItemStack(TinkerTools.slimesuit.get(ArmorItem.Type.HELMET))),
                 resource("world/slimeskull"), slimesuit, FrameType.CHALLENGE, builder -> {
                     Item helmet = TinkerTools.slimesuit.get(ArmorItem.Type.HELMET);
                     Consumer<MaterialId> with = mat -> builder.addCriterion(mat.getPath(), InventoryChangeTrigger.TriggerInstance.hasItems(ToolStackItemPredicate.ofContext(
@@ -468,6 +479,57 @@ public class AdvancementsProvider extends GenericDataProvider {
         hiddenBuilder(resource("internal/starting_book"), ConfigEnabledCondition.SPAWN_WITH_BOOK, builder -> {
             builder.addCriterion("tick", new PlayerTrigger.TriggerInstance(CriteriaTriggers.TICK.getId(), ContextAwarePredicate.ANY));
             builder.rewards(AdvancementRewards.Builder.loot(TConstruct.getResource("gameplay/starting_book")));
+        });
+
+        // grant vanilla advancements
+        // crafting station for the crafting table advancement
+        grantAdvancement(resource("internal/crafting_station"), AdvancementIds.STORY_ROOT, builder -> builder.addCriterion("crafting_station", hasItem(TinkerTables.craftingStation)));
+        // pickaxes that mine stone tier grant upgrade tool advancement
+        grantAdvancement(resource("internal/stone_pickaxe"), AdvancementIds.STONE_PICK, builder -> builder.addCriterion("stone_pick", hasToolStack(
+                ToolStackPredicate.tag(TinkerTags.Items.HARVEST),
+                new ToolActionPredicate(ToolActions.PICKAXE_DIG),
+                new StatInSetPredicate<>(ToolStats.HARVEST_TIER, Tiers.STONE))));
+        // pickaxes that mine iron tier grant iron tools advancement
+        grantAdvancement(resource("internal/iron_pickaxe"), AdvancementIds.IRON_PICK, builder -> builder.addCriterion("iron_pick", hasToolStack(
+                ToolStackPredicate.tag(TinkerTags.Items.HARVEST),
+                new ToolActionPredicate(ToolActions.PICKAXE_DIG),
+                new StatInSetPredicate<>(ToolStats.HARVEST_TIER, Tiers.IRON))));
+        // anything with tilling and netherite grants netherite hoe
+        grantAdvancement(resource("internal/netherite_hoe"), AdvancementIds.NETHERITE_HOE, builder -> builder.addCriterion("iron_pick", hasToolStack(
+                ToolStackPredicate.tag(TinkerTags.Items.INTERACTABLE_RIGHT),
+                new ToolActionPredicate(ToolActions.HOE_TILL),
+                new VolatileDataPredicate(AdvancementIds.NETHERITE))));
+        // boots with the snow boots flag can walk on powder snow
+        grantAdvancement(resource("internal/walk_on_powder_snow"), AdvancementIds.WALK_ON_POWDER_SNOW, builder ->
+                builder.addCriterion("has_boots", PlayerTrigger.TriggerInstance.located(EntityPredicate.Builder.entity()
+                        .equipment(EntityEquipmentPredicate.Builder.equipment().feet(ToolStackItemPredicate.ofTool(new VolatileDataPredicate(ModifiableArmorItem.SNOW_BOOTS))).build())
+                        .steppingOn(LocationPredicate.Builder.location().setBlock(BlockPredicate.Builder.block().of(Blocks.POWDER_SNOW).build()).build())
+                        .build()))
+        );
+        // have 3 different armor events, need 1 advancement per piece as each just grants 1 criteria
+        for (ArmorItem.Type type : ArmorItem.Type.values()) {
+            String criteria = type.getName();
+            TagKey<Item> tag = switch (type) {
+                case HELMET -> TinkerTags.Items.HELMETS;
+                case CHESTPLATE -> TinkerTags.Items.CHESTPLATES;
+                case LEGGINGS -> TinkerTags.Items.LEGGINGS;
+                case BOOTS -> TinkerTags.Items.BOOTS;
+            };
+            // iron armor expects iron from armor plating
+            IJsonPredicate<IToolStackView> hasTag = ToolStackPredicate.tag(tag);
+            grantAdvancement(resource("internal/iron_armor/" + criteria), AdvancementIds.OBTAIN_ARMOR, "iron_" + criteria, builder -> builder.addCriterion("has_armor", hasToolStack(hasTag, new VolatileDataPredicate(AdvancementIds.IRON_ARMOR))));
+            // diamond armor wants the diamond modifier
+            grantAdvancement(resource("internal/diamond_armor/" + criteria), AdvancementIds.SHINY_GEAR, "diamond_" + criteria, builder -> builder.addCriterion("has_armor", hasToolStack(hasTag, new VolatileDataPredicate(AdvancementIds.DIAMOND_ARMOR))));
+        }
+        // netherite armor wants a whole set of netherite armor in the inventory at once
+        grantAdvancement(resource("internal/netherite_armor"), AdvancementIds.NETHERITE_ARMOR, builder -> {
+            ToolStackPredicate hasNetherite = new VolatileDataPredicate(AdvancementIds.NETHERITE);
+            Function<TagKey<Item>,ItemPredicate> predicate = tag -> ToolStackItemPredicate.ofTool(ToolStackPredicate.and(ToolStackPredicate.tag(tag), hasNetherite));
+            builder.addCriterion("has_armor", InventoryChangeTrigger.TriggerInstance.hasItems(
+                    predicate.apply(TinkerTags.Items.HELMETS),
+                    predicate.apply(TinkerTags.Items.CHESTPLATES),
+                    predicate.apply(TinkerTags.Items.LEGGINGS),
+                    predicate.apply(TinkerTags.Items.BOOTS)));
         });
     }
 
@@ -674,5 +736,41 @@ public class AdvancementsProvider extends GenericDataProvider {
         conditionalBuilder.addAdvancement(builder);
         conditionalBuilder.write();
         conditionalConsumer.accept(name, conditionalBuilder);
-    }
+  }
+
+  /**
+   * Helper for making an internal advancement granting a vanilla one
+   * @param name         Advancement name
+   * @param advancement  Vanilla advancement to grant
+   * @param consumer     Consumer to add conditions
+   */
+  protected void grantAdvancement(ResourceLocation name, ResourceLocation advancement, Consumer<Advancement.Builder> consumer) {
+    Advancement.Builder builder = Advancement.Builder.advancement();
+    // grant the advancement
+    builder.rewards(AdvancementRewards.Builder.function(AdvancementIds.function(advancement)));
+    consumer.accept(builder);
+    builder.save(advancementConsumer, name.toString());
+  }
+
+  /**
+   * Helper for making an internal advancement granting a vanilla criteria
+   * @param name         Advancement name
+   * @param advancement  Vanilla advancement to grant
+   * @param criteria     Criteria string to grant
+   * @param consumer     Consumer to add conditions
+   */
+  protected void grantAdvancement(ResourceLocation name, ResourceLocation advancement, String criteria, Consumer<Advancement.Builder> consumer) {
+    grantAdvancement(name, advancement.withSuffix('_' + criteria), consumer);
+  }
+
+  /** Creates a predicate for a tool stack */
+  private CriterionTriggerInstance hasToolStack(IJsonPredicate<IToolStackView> predicate) {
+    return InventoryChangeTrigger.TriggerInstance.hasItems(ToolStackItemPredicate.ofTool(predicate));
+  }
+
+  /** Creates a predicate for a tool stack */
+  @SafeVarargs
+  private CriterionTriggerInstance hasToolStack(IJsonPredicate<IToolStackView>... predicate) {
+    return hasToolStack(ToolStackPredicate.and(predicate));
+  }
 }
